k8s-manifests/base/payments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: akhilthyadi/kube-payments:latest
          ports:
            - containerPort: 8080
