k8s-manifests/base/payments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
